<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.fragments.FridgeFragment"
    android:background="@color/color_background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="@dimen/content_padding"
        android:paddingStart="@dimen/content_padding"
        android:paddingEnd="@dimen/content_padding"
        app:layout_constraintBottom_toTopOf="@+id/btn_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            style="@style/MainTextColoredStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/welcome_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_text"
            android:text="@string/welcome_sub_text"
            style="@style/SubTextColoredStyle"
            app:layout_constraintStart_toStartOf="@+id/welcome_text"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_height"
            android:layout_marginStart="@dimen/card_view_horizontal_padding"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:layout_marginEnd="@dimen/card_view_horizontal_padding"
            android:background="@color/color_background_sub"
            android:visibility="gone"
            app:cardCornerRadius="@dimen/small_card_corner_radius"
            app:cardElevation="@dimen/card_elevation"
            app:cardPreventCornerOverlap="false"
            app:contentPaddingLeft="@dimen/card_content_padding"
            app:contentPaddingRight="@dimen/card_content_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_description">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="15"
                    android:src="@drawable/ic_search" />


                <EditText
                    android:id="@+id/searchView"
                    style="@style/SubTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="70"
                    android:focusedByDefault="false"
                    android:hint="@string/search_bar_placeholder_text" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="15"
                    android:src="@drawable/ic_microphone" />
            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerCategory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/layout_margin_top"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            tools:listitem="@layout/aisle_item_layout"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btn_proceed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/proceed_button_height"
        android:layout_marginStart="@dimen/content_padding"
        android:layout_marginEnd="@dimen/content_padding"
        android:elevation="@dimen/card_elevation"
        android:text="@string/proceed_button_text"
        style="@style/ButtonTextStyle"
        android:visibility="gone"
        app:cornerRadius="@dimen/small_card_corner_radius"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        app:menu="@menu/bottom_menu"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_retry"
        style="@style/RetryButtonTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry_button_text"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

